# mtr-nuscenes

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/ablations/: adapt_img.yaml  contrastive_only.yaml  ctx_t4.yaml  ctx_t8.yaml  frozen_img.yaml  full.yaml  mini_front.yaml  motion_only.yaml  no_mlm.yaml  scale_6cam_adapt.yaml  scale_6cam_ctrv.yaml  scale_6cam_kinematic.yaml  scale_6cam_v2.yaml  scale_front_adapt.yaml  scale_trainval.yaml  scale_trainval_6cam.yaml
data/index/: mini_T4_s2.json  mini_T6_s2.json  mini_T6_s2_front.json  mini_T6_s3.json  mini_T8_s2.json
reports/: results.md  results_tables.md  summary.json
scripts/: baseline_frozen.py  build_index.py  cache_features.py  collect_results.py  download_trainval_6cam.sh  evaluate.py  make_demos.py  run_6cam_adapt.sh  run_6cam_after_index.sh  run_all.sh  run_ctrv.sh  run_front_adapt.sh  run_image_ablation.sh  run_kinematic.sh  run_scale.sh  run_scale_6cam.sh  run_v2.sh  train.py
src/mtr/: __init__.py  utils.py
src/mtr/data/: __init__.py  dataset.py  feature_cache.py  index.py  transforms.py
src/mtr/eval/: __init__.py  core.py  full.py
src/mtr/models/: __init__.py  frame_encoder.py  heads.py  losses.py  model.py  temporal.py  text_encoder.py
src/mtr/train/: __init__.py  distributed.py  scheduler.py  trainer.py
tests/: conftest.py  test_data.py  test_losses_eval.py  test_model.py
